--- a/index.html
+++ b/index.html
@@ -997,7 +997,9 @@
     <div class="hero-img-wrap">
       <div class="hero-img-bg"></div>
       <div class="hero-photo-placeholder">
-        <span class="hero-photo-initials">WA</span>
+       <img src="WhatsApp Image 2026-02-07 at 05.54.29.jpeg" 
+     alt="Arwanda Amalisa" 
+     style="width:100%; height:100%; object-fit:cover; object-position:top;">
       </div>
       <div class="hero-stats right">
         <div class="stat-card">
