--- a/index.html
+++ b/index.html
@@ -1119,6 +1119,13 @@
           <span class="stack-pill">Vercel</span>
           <span class="stack-pill">GitHub</span>
           <span class="stack-pill">No-Code</span>
+          <a href="https://bali-explorer-ai.vercel.app/" 
+   target="_blank"
+   style="display:inline-flex; align-items:center; gap:6px;
+          margin-top:16px; color:#C4622D; font-size:0.85rem; 
+          font-weight:600; text-decoration:none;">
+  Visit Site →
+</a>
         </div>
       </div>
     </div>
