--- a/index.html
+++ b/index.html
@@ -1179,6 +1179,13 @@
           <span class="stack-pill">Client Relations</span>
           <span class="stack-pill">Concierge</span>
         </div>
+        <a href="https://www.instagram.com/temanbantubali_" 
+   target="_blank"
+   style="display:inline-flex; align-items:center; gap:6px;
+          margin-top:16px; color:#C4622D; font-size:0.85rem; 
+          font-weight:600; text-decoration:none;">
+  📸 Follow di Instagram →
+</a>
       </div>
     </div>
   </div>
