--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,7 @@
 <footer>
   <span class="footer-logo">Wanda<span>.</span></span>
   <p>© 2026 Arwanda Amalisa · Bali, Indonesia · Open for Remote Work</p>
-  <p>Built with AI · Claude + Google AI Studio</p>
+ <p>© 2026 Arwanda Amalisa · All Rights Reserved</p>
 </footer>
 
 <script>
